# 6d

./: .env.runpod.example  .gitignore  .pre-commit-config.yaml  AWS_SETUP.md  CONVERSION_PLAN.md  DEMO_INSTRUCTIONS.md  Dockerfile  Dockerfile.runpod  README.md  RUNPOD_SETUP.md  ares_ingestion.py  db_updater.py  docker-compose.yml  inspect_parquet.py  main.py  mongo-docker-compose.yml  params.json  prompt.txt  prompt_path.txt  pyproject.toml  requirements.txt  run_grounding_annotations.py  run_grounding_annotations_local.py  setup.py  simple_builder.ipynb  test_embed.py  test_extractor.py  test_extractory.py  test_grounding_annotations.py  test_modal.py  tester.ipynb  tester.py  verify_embeddings.py  verify_ingestion.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
notebooks/: annotations_nb.ipynb  distributions.ipynb  eval_nb.ipynb  llm_tester.ipynb  simple_builder.ipynb  test_sampling.ipynb  tester.ipynb
run_cosmos/: Dockerfile  server.py
runpod_setup/: Dockerfile  deploy.sh  handler.py  requirements.txt
scripts/: create_demo_data.py  db_updater.py  deploy_runpod_endpoint.py  eval.py  get_command.py  ingest_lerobot_dataset.py  pi_demo_ingestion.py  run_grounding_annotation_with_modal.py  run_structured_ingestion.py  run_trajectory_embedding_ingestion.py  self_heal.py
src/: configs.py  cosmos_handler.py  database.py
src/ares/: configs.py  (+14 more)
tests/: test_cosmos_augmentation.py
webapp-backend/: .dockerignore  .gitignore  README.md  STRIPE_SETUP.md  ares_api.py  auth.py  generate_prompt.py  ingestion_main.py  main.py  requirements.txt  server.py
(+288 files in other folders)
